// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes class and t-att-class should combine together 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 2, tag: \\"div\\", children: [], attrs: {class:\\"hello\\"}, key: \`k1\`, class: this.toClassObj(ctx['value'])};
}"
`;

exports[`attributes dynamic attribute falsy variable  1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = ctx['value']
    return {type: 2, tag: \\"div\\", children: [], attrs: {foo:_1}, key: \`k2\`};
}"
`;

exports[`attributes dynamic attribute with a dash 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = ctx['id']
    return {type: 2, tag: \\"div\\", children: [], attrs: {\\"data-action-id\\":_1}, key: \`k2\`};
}"
`;

exports[`attributes dynamic attributes 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = 'bar'
    return {type: 2, tag: \\"div\\", children: [], attrs: {foo:_1}, key: \`k2\`};
}"
`;

exports[`attributes dynamic class attribute 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 2, tag: \\"div\\", children: [], key: \`k1\`, class: this.toClassObj(ctx['c'])};
}"
`;

exports[`attributes dynamic empty class attribute 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 2, tag: \\"div\\", children: [], key: \`k1\`, class: this.toClassObj(ctx['c'])};
}"
`;

exports[`attributes fixed variable 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = ctx['value']
    return {type: 2, tag: \\"div\\", children: [], attrs: {foo:_1}, key: \`k2\`};
}"
`;

exports[`attributes from object variables set previously 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.o = {a:'b'};
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`, class: this.toClassObj(ctx['o'].a)};
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3\`};
}"
`;

exports[`attributes from variables set previously 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.abc = 'def';
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`, class: this.toClassObj(ctx['abc'])};
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3\`};
}"
`;

exports[`attributes static attributes 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 19, template: \\"__template__1\\"};
}"
`;

exports[`attributes static attributes on void elements 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 21, template: \\"__template__1\\"};
}"
`;

exports[`attributes static attributes with dashes 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 20, template: \\"__template__1\\"};
}"
`;

exports[`attributes t-att-class and class should combine together 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 2, tag: \\"div\\", children: [], attrs: {class:\\"hello\\"}, key: \`k1\`, class: this.toClassObj(ctx['value'])};
}"
`;

exports[`debugging t-debug 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    debugger;
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (true) {
        debugger;
        let vn3 = {type: 5, id: 31, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`foreach does not pollute the rendering context 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [1];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.item_first = i0 === 0;
        ctx.item_last = i0 === length3 - 1;
        ctx.item = _4[i0];
        ctx.item_index = i0;
        ctx.item_value = _4[i0];
        let vn5 = {type: 3, text: ctx['item'], el: null};
        vn2.children.push(vn5);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`foreach iterate on items (on a element node) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [1,2];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.item_first = i0 === 0;
        ctx.item_last = i0 === length3 - 1;
        ctx.item = _4[i0];
        ctx.item_index = i0;
        ctx.item_value = _4[i0];
        let key5 = ctx['item'];
        let vn6 = {type: 3, text: ctx['item'], el: null};
        let vn8 = {type: 2, tag: \\"span\\", children: [vn6], key: \`k7__\${key5}\`};
        vn2.children.push(vn8);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`foreach iterate on items 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [3,2,1];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.item_first = i0 === 0;
        ctx.item_last = i0 === length3 - 1;
        ctx.item = _4[i0];
        ctx.item_index = i0;
        ctx.item_value = _4[i0];
        let vn5 = {type: 3, text: \` [\`, el: null};
        let vn6 = {type: 3, text: ctx['item_index'], el: null};
        let vn7 = {type: 3, text: \`: \`, el: null};
        let vn8 = {type: 3, text: ctx['item'], el: null};
        let vn9 = {type: 3, text: \` \`, el: null};
        let vn10 = {type: 3, text: ctx['item_value'], el: null};
        let vn11 = {type: 3, text: \`] \`, el: null};
        let vn12 = {type: 1, children: [vn5,vn6,vn7,vn8,vn9,vn10,vn11]};
        vn2.children.push(vn12);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`foreach iterate, position 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = Array(5);
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.elem_first = i0 === 0;
        ctx.elem_last = i0 === length3 - 1;
        ctx.elem = _4[i0];
        ctx.elem_index = i0;
        ctx.elem_value = _4[i0];
        let vn5 = {type: 1, children: []};
        vn2.children.push(vn5);
        let vn6 = {type: 3, text: \` -\`, el: null};
        vn5.children.push(vn6);
        if (ctx['elem_first']) {
            let vn7 = {type: 3, text: \`first \`, el: null};
            vn5.children.push(vn7);
        }
        if (ctx['elem_last']) {
            let vn8 = {type: 3, text: \` last\`, el: null};
            vn5.children.push(vn8);
        }
        let vn9 = {type: 3, text: \`(\`, el: null};
        vn5.children.push(vn9);
        let vn10 = {type: 3, text: ctx['elem_index'], el: null};
        vn5.children.push(vn10);
        let vn11 = {type: 3, text: \`) \`, el: null};
        vn5.children.push(vn11);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`foreach t-foreach in t-forach 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = ctx['numbers'];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.number_first = i0 === 0;
        ctx.number_last = i0 === length3 - 1;
        ctx.number = _4[i0];
        ctx.number_index = i0;
        ctx.number_value = _4[i0];
        let _6 = ctx['letters'];
        let length5 = _6.length;
        ctx = Object.create(ctx);
        for (let i1 = 0; i1 < length5; i1++) {
            ctx.letter_first = i1 === 0;
            ctx.letter_last = i1 === length5 - 1;
            ctx.letter = _6[i1];
            ctx.letter_index = i1;
            ctx.letter_value = _6[i1];
            let vn7 = {type: 3, text: \` [\`, el: null};
            let vn8 = {type: 3, text: ctx['number'], el: null};
            let vn9 = {type: 3, text: ctx['letter'], el: null};
            let vn10 = {type: 3, text: \`] \`, el: null};
            let vn11 = {type: 1, children: [vn7,vn8,vn9,vn10]};
            vn2.children.push(vn11);
        }
        ctx = ctx.__proto__;
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`misc global 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__4\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [4,5,6];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.value_first = i0 === 0;
        ctx.value_last = i0 === length3 - 1;
        ctx.value = _4[i0];
        ctx.value_index = i0;
        ctx.value_value = _4[i0];
        let vn5 = {type: 3, text: ctx['value'], el: null};
        let vn7 = {type: 2, tag: \\"span\\", children: [vn5], key: \`k6__\${i0}\`};
        ctx = Object.create(ctx);
        ctx = Object.create(ctx);
        ctx.foo = 'aaa';
        ctx[this.zero] = {type: 1, children: new this.VDomArray()};
        let vn8 = this.callTemplate(\\"__template__2\\", ctx, metadata);
        ctx = ctx.__proto__;
        let vn9 = this.callTemplate(\\"__template__2\\", ctx, metadata);
        ctx.foo = 'bbb';
        let vn10 = this.callTemplate(\\"__template__2\\", ctx, metadata);
        ctx[this.zero] = {type: 1, children: new this.VDomArray(vn8,vn9,vn10)};
        let vn11 = this.callTemplate(\\"__template__1\\", ctx, metadata);
        ctx = ctx.__proto__;
        let vn12 = {type: 1, children: [vn7,vn11]};
        vn2.children.push(vn12);
    }
    ctx = ctx.__proto__;
    let vn13 = this.callTemplate(\\"__template__3\\", ctx, metadata);
    vn2.children.push(vn13);
    return vn2;
}"
`;

exports[`misc mix of t-foreach and t-set/t-value 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [1,2,3];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.a_first = i0 === 0;
        ctx.a_last = i0 === length3 - 1;
        ctx.a = _4[i0];
        ctx.a_index = i0;
        ctx.a_value = _4[i0];
        let key5 = ctx['a'];
        let _7 = [4,5,6];
        let length6 = _7.length;
        ctx = Object.create(ctx);
        for (let i1 = 0; i1 < length6; i1++) {
            ctx.b_first = i1 === 0;
            ctx.b_last = i1 === length6 - 1;
            ctx.b = _7[i1];
            ctx.b_index = i1;
            ctx.b_value = _7[i1];
            let key8 = ctx['b'];
            ctx = Object.create(ctx);
            ctx.c = 'x ';
            ctx[this.zero] = {type: 1, children: new this.VDomArray()};
            let vn9 = this.callTemplate(\\"__template__1\\", ctx, metadata);
            vn2.children.push(vn9);
            ctx = ctx.__proto__;
        }
        ctx = ctx.__proto__;
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`misc mix of t-foreach and t-set/t-value, 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [1,2,3];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.a_first = i0 === 0;
        ctx.a_last = i0 === length3 - 1;
        ctx.a = _4[i0];
        ctx.a_index = i0;
        ctx.a_value = _4[i0];
        let key5 = ctx['a'];
        let _7 = [4,5,6];
        let length6 = _7.length;
        ctx = Object.create(ctx);
        for (let i1 = 0; i1 < length6; i1++) {
            ctx.b_first = i1 === 0;
            ctx.b_last = i1 === length6 - 1;
            ctx.b = _7[i1];
            ctx.b_index = i1;
            ctx.b_value = _7[i1];
            let key8 = ctx['b'];
            ctx.c = 'x ';
            let vn9 = {type: 3, text: ctx['a'], el: null};
            let vn10 = {type: 3, text: ctx['b'], el: null};
            let vn11 = {type: 3, text: ctx['c'], el: null};
            let vn12 = {type: 1, children: [vn9,vn10,vn11]};
            vn2.children.push(vn12);
        }
        ctx = ctx.__proto__;
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`special cases for some boolean html attributes/properties input type= checkbox, with t-att-checked 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = ctx['flag']
    return {type: 2, tag: \\"input\\", children: [], attrs: {type:\\"checkbox\\",checked:_1}, key: \`k2\`};
}"
`;

exports[`special cases for some boolean html attributes/properties various boolean html attributes 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 27, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with a class attribute 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 4, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with a class attribute with a quote 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 5, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with a empty class attribute 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 7, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with a span child node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 8, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with a text node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 3, template: \\"__template__1\\"};
}"
`;

exports[`static templates div with an arbitrary attribute with a quote 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 6, template: \\"__template__1\\"};
}"
`;

exports[`static templates empty div 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 0, template: \\"__template__1\\"};
}"
`;

exports[`static templates no template (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 1, children: []};
}"
`;

exports[`static templates properly handle comments 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 9, template: \\"__template__1\\"};
}"
`;

exports[`static templates properly handle comments between t-if/t-else 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (true) {
        let vn3 = {type: 5, id: 10, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    } else {
        let vn4 = {type: 3, text: \`owl\`, el: null};
        let vn6 = {type: 2, tag: \\"span\\", children: [vn4], key: \`k5\`};
        vn2.children.push(vn6);
    }
    return vn2;
}"
`;

exports[`static templates simple dynamic value 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 3, text: ctx['text'], el: null};
}"
`;

exports[`static templates simple string (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 3, text: \`hello vdom\`, el: null};
}"
`;

exports[`static templates simple string 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 3, text: \`hello vdom\`, el: null};
}"
`;

exports[`static templates simple string, with some dynamic value 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: \`hello \`, el: null};
    let vn2 = {type: 3, text: ctx['text'], el: null};
    return {type: 1, children: [vn1,vn2]};
}"
`;

exports[`static templates two empty divs (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 5, id: 1, template: \\"__template__1\\"};
    let vn2 = {type: 5, id: 2, template: \\"__template__1\\"};
    return {type: 1, children: [vn1,vn2]};
}"
`;

exports[`t-call (template calling basic caller 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling basic caller, no parent node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    return this.callTemplate(\\"__template__1\\", ctx, metadata);
}"
`;

exports[`t-call (template calling call with several sub nodes on same line 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 5, id: 1, template: \\"__template__2\\"};
    let vn2 = {type: 3, text: \` \`, el: null};
    let vn3 = {type: 5, id: 2, template: \\"__template__2\\"};
    ctx[this.zero] = {type: 1, children: new this.VDomArray(vn1,vn2,vn3)};
    let vn4 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-call (template calling cascading t-call t-raw='0' 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__4\`
    ctx = Object.create(ctx);
    let vn1 = {type: 5, id: 0, template: \\"__template__4\\"};
    let vn2 = {type: 3, text: \` \`, el: null};
    let vn3 = {type: 5, id: 1, template: \\"__template__4\\"};
    ctx[this.zero] = {type: 1, children: new this.VDomArray(vn1,vn2,vn3)};
    let vn4 = this.callTemplate(\\"__template__3\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-call (template calling inherit context 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    ctx.foo = 1;
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling recursive template, part 1 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`recursive\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let vn3 = {type: 3, text: \`hey\`, el: null};
    let vn5 = {type: 2, tag: \\"span\\", children: [vn3], key: \`k4\`};
    vn2.children.push(vn5);
    if (false) {
        let vn6 = this.callTemplate(\\"recursive\\", ctx, metadata);
        vn2.children.push(vn6);
    }
    return vn2;
}"
`;

exports[`t-call (template calling recursive template, part 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`Parent\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.node = ctx['root'];
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"nodeTemplate\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling recursive template, part 3 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`Parent\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.node = ctx['root'];
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"nodeTemplate\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling recursive template, part 4: with t-set recursive index 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`Parent\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.recursive_idx = 1;
    ctx.node = ctx['root'];
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"nodeTemplate\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling scoped parameters 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.foo = 42;
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    let vn2 = {type: 3, text: ctx['foo'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1,vn2], key: \`k3\`};
}"
`;

exports[`t-call (template calling t-call with t-if 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['flag']) {
        let vn3 = this.callTemplate(\\"__template__1\\", ctx, metadata);
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-call (template calling t-call with t-set inside and outside 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = ctx['list'];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.v_first = i0 === 0;
        ctx.v_last = i0 === length3 - 1;
        ctx.v = _4[i0];
        ctx.v_index = i0;
        ctx.v_value = _4[i0];
        ctx.val = ctx['v'].val;
        ctx = Object.create(ctx);
        ctx.val3 = ctx['val']*3;
        ctx[this.zero] = {type: 1, children: new this.VDomArray()};
        let vn5 = this.callTemplate(\\"__template__1\\", ctx, metadata);
        ctx = ctx.__proto__;
        let vn6 = {type: 1, children: [vn5]};
        vn2.children.push(vn6);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-call (template calling t-call with t-set inside and outside. 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__3\`
    ctx = Object.create(ctx);
    ctx.w = 'fromwrapper';
    let vn1 = this.callTemplate(\\"__template__2\\", ctx, metadata);
    return {type: 2, tag: \\"p\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-call (template calling t-call, conditional and t-set in t-call body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__3\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.v1 = 'elif';
    if (ctx['v1']==='if') {
        let vn3 = this.callTemplate(\\"__template__1\\", ctx, metadata);
        vn2.children.push(vn3);
    } else if (ctx['v1']==='elif') {
        ctx = Object.create(ctx);
        ctx.v = 'success';
        ctx[this.zero] = {type: 1, children: new this.VDomArray()};
        let vn4 = this.callTemplate(\\"__template__2\\", ctx, metadata);
        vn2.children.push(vn4);
        ctx = ctx.__proto__;
    }
    return vn2;
}"
`;

exports[`t-call (template calling with unused body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`WHEEE\`, el: null};
    ctx[this.zero] = {type: 1, children: new this.VDomArray(vn1)};
    let vn2 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-call (template calling with unused setbody 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.qux = 3;
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return vn1;
}"
`;

exports[`t-call (template calling with used body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`ok\`, el: null};
    ctx[this.zero] = {type: 1, children: new this.VDomArray(vn1)};
    let vn2 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-call (template calling with used set body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    ctx = Object.create(ctx);
    ctx.foo = 'ok';
    ctx[this.zero] = {type: 1, children: new this.VDomArray()};
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc div with falsy values 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: ctx['v1'], el: null};
    let vn3 = {type: 2, tag: \\"p\\", children: [vn1], key: \`k2\`};
    let vn4 = {type: 3, text: ctx['v2'], el: null};
    let vn6 = {type: 2, tag: \\"p\\", children: [vn4], key: \`k5\`};
    let vn7 = {type: 3, text: ctx['v3'], el: null};
    let vn9 = {type: 2, tag: \\"p\\", children: [vn7], key: \`k8\`};
    let vn10 = {type: 3, text: ctx['v4'], el: null};
    let vn12 = {type: 2, tag: \\"p\\", children: [vn10], key: \`k11\`};
    let vn13 = {type: 3, text: ctx['v5'], el: null};
    let vn15 = {type: 2, tag: \\"p\\", children: [vn13], key: \`k14\`};
    return {type: 2, tag: \\"div\\", children: [vn3,vn6,vn9,vn12,vn15], key: \`k16\`};
}"
`;

exports[`t-esc escaping 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: ctx['var'], el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc escaping a list 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: ctx['var'], el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc escaping on a node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: 'ok', el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc escaping on a node with a body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`};
    let _3 = 'ok'
    if (_3 !== undefined) {
        let vn4 = {type: 3, text: _3, el: null};
        vn2.children.push(vn4);
    } else {
        let vn5 = {type: 3, text: \`nope\`, el: null};
        vn2.children.push(vn5);
    }
    return vn2;
}"
`;

exports[`t-esc escaping on a node with a body, as a default 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`};
    let _3 = ctx['var']
    if (_3 !== undefined) {
        let vn4 = {type: 3, text: _3, el: null};
        vn2.children.push(vn4);
    } else {
        let vn5 = {type: 3, text: \`nope\`, el: null};
        vn2.children.push(vn5);
    }
    return vn2;
}"
`;

exports[`t-esc literal 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: 'ok', el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc t-esc inside t-call, with t-set outside 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`Hi\`, el: null};
    ctx.v = new this.VDomArray(vn1);
    let vn2 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3\`};
}"
`;

exports[`t-esc t-esc is escaped 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`escaped\`, el: null};
    let vn3 = {type: 2, tag: \\"p\\", children: [vn1], key: \`k2\`};
    ctx.var = new this.VDomArray(vn3);
    let vn4 = {type: 3, text: ctx['var'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-esc t-esc work with spread operator 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: [...ctx['state'].list], el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-esc t-esc=0 is escaped 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 5, id: 0, template: \\"__template__2\\"};
    ctx[this.zero] = {type: 1, children: new this.VDomArray(vn1)};
    let vn2 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    ctx = ctx.__proto__;
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3\`};
}"
`;

exports[`t-esc variable 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: ctx['var'], el: null};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-if boolean value condition elif 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['color']=='black') {
        let vn3 = {type: 3, text: \`black pearl\`, el: null};
        vn2.children.push(vn3);
    } else if (ctx['color']=='yellow') {
        let vn4 = {type: 3, text: \`yellow submarine\`, el: null};
        vn2.children.push(vn4);
    } else if (ctx['color']=='red') {
        let vn5 = {type: 3, text: \`red is dead\`, el: null};
        vn2.children.push(vn5);
    } else {
        let vn6 = {type: 3, text: \`beer\`, el: null};
        vn2.children.push(vn6);
    }
    return vn2;
}"
`;

exports[`t-if boolean value condition else 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let vn3 = {type: 3, text: \`begin\`, el: null};
    let vn5 = {type: 2, tag: \\"span\\", children: [vn3], key: \`k4\`};
    vn2.children.push(vn5);
    if (ctx['condition']) {
        let vn6 = {type: 3, text: \`ok\`, el: null};
        vn2.children.push(vn6);
    } else {
        let vn7 = {type: 3, text: \`ok-else\`, el: null};
        vn2.children.push(vn7);
    }
    let vn8 = {type: 5, id: 14, template: \\"__template__1\\"};
    vn2.children.push(vn8);
    return vn2;
}"
`;

exports[`t-if boolean value condition false else 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let vn3 = {type: 3, text: \`begin\`, el: null};
    let vn5 = {type: 2, tag: \\"span\\", children: [vn3], key: \`k4\`};
    vn2.children.push(vn5);
    if (ctx['condition']) {
        let vn6 = {type: 3, text: \`fail\`, el: null};
        vn2.children.push(vn6);
    } else {
        let vn7 = {type: 3, text: \`fail-else\`, el: null};
        vn2.children.push(vn7);
    }
    let vn8 = {type: 5, id: 15, template: \\"__template__1\\"};
    vn2.children.push(vn8);
    return vn2;
}"
`;

exports[`t-if boolean value condition missing 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`};
    if (ctx['condition']) {
        let vn3 = {type: 3, text: \`fail\`, el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if boolean value false condition (on a dom node) (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['condition']) {
        let vn3 = {type: 5, id: 12, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if boolean value false condition 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['condition']) {
        let vn3 = {type: 3, text: \`ok\`, el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if boolean value false condition, resulting in empty template (on a dom node) (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn0 = {type: 1, children: []};
    if (ctx['condition']) {
        let vn1 = {type: 5, id: 13, template: \\"__template__1\\"};
        vn0.children.push(vn1);
    }
    return vn0;
}"
`;

exports[`t-if boolean value true condition (on a dom node) (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['condition']) {
        let vn3 = {type: 5, id: 11, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if boolean value true condition 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['condition']) {
        let vn3 = {type: 3, text: \`ok\`, el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if can use some boolean operators in expressions 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['cond1']&&ctx['cond2']) {
        let vn3 = {type: 3, text: \`and\`, el: null};
        vn2.children.push(vn3);
    }
    if (ctx['cond1']&&ctx['cond3']) {
        let vn4 = {type: 3, text: \`nope\`, el: null};
        vn2.children.push(vn4);
    }
    if (ctx['cond1']||ctx['cond3']) {
        let vn5 = {type: 3, text: \`or\`, el: null};
        vn2.children.push(vn5);
    }
    if (ctx['cond3']||ctx['cond4']) {
        let vn6 = {type: 3, text: \`nope\`, el: null};
        vn2.children.push(vn6);
    }
    if (ctx['m']>3) {
        let vn7 = {type: 3, text: \`mgt\`, el: null};
        vn2.children.push(vn7);
    }
    if (ctx['n']>3) {
        let vn8 = {type: 3, text: \`ngt\`, el: null};
        vn2.children.push(vn8);
    }
    if (ctx['m']<3) {
        let vn9 = {type: 3, text: \`mlt\`, el: null};
        vn2.children.push(vn9);
    }
    if (ctx['n']<3) {
        let vn10 = {type: 3, text: \`nlt\`, el: null};
        vn2.children.push(vn10);
    }
    return vn2;
}"
`;

exports[`t-if t-esc with t-elif 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (false) {
        let vn3 = {type: 3, text: \`abc\`, el: null};
        vn2.children.push(vn3);
    } else {
        let vn4 = {type: 3, text: 'x', el: null};
        vn2.children.push(vn4);
    }
    return vn2;
}"
`;

exports[`t-if t-esc with t-if 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (true) {
        let vn3 = {type: 3, text: 'x', el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if t-set, then t-elif, part 3 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.y = false;
    ctx.x = ctx['y'];
    if (ctx['x']) {
        let vn3 = {type: 5, id: 17, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    } else if (!ctx['x']) {
        let vn4 = {type: 5, id: 18, template: \\"__template__1\\"};
        vn2.children.push(vn4);
    }
    return vn2;
}"
`;

exports[`t-if t-set, then t-if 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.title = 'test';
    if (ctx['title']) {
        let vn3 = {type: 3, text: ctx['title'], el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-if t-set, then t-if, part 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.y = true;
    ctx.x = ctx['y'];
    if (ctx['x']) {
        let vn3 = {type: 5, id: 16, template: \\"__template__1\\"};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-key can use t-key directive on a node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let key1 = ctx['beer'].id;
    let vn2 = {type: 3, text: ctx['beer'].name, el: null};
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3__\${key1}\`};
}"
`;

exports[`t-key t-key directive in a list 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"ul\\", children: [], key: \`k1\`};
    let _4 = ctx['beers'];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.beer_first = i0 === 0;
        ctx.beer_last = i0 === length3 - 1;
        ctx.beer = _4[i0];
        ctx.beer_index = i0;
        ctx.beer_value = _4[i0];
        let key5 = ctx['beer'].id;
        let vn6 = {type: 3, text: ctx['beer'].name, el: null};
        let vn8 = {type: 2, tag: \\"li\\", children: [vn6], key: \`k7__\${key5}\`};
        vn2.children.push(vn8);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-key t-key directive in a list 2`] = `"<ul><li>Chimay Rouge</li></ul>"`;

exports[`t-on can bind event handler 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn1], key: \`k2\`, on: {click: ev => this.handle(ev, metadata, [], 'add')}};
}"
`;

exports[`t-on can bind handlers with arguments 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = [5];
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, 'add')}};
}"
`;

exports[`t-on can bind handlers with empty object (with non empty inner string) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = [{}];
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, 'doSomething')}};
}"
`;

exports[`t-on can bind handlers with empty object 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = [{}];
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, 'doSomething')}};
}"
`;

exports[`t-on can bind handlers with loop variable as argument 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"ul\\", children: [], key: \`k1\`};
    let _4 = ['someval'];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.action_first = i0 === 0;
        ctx.action_last = i0 === length3 - 1;
        ctx.action = _4[i0];
        ctx.action_index = i0;
        ctx.action_value = _4[i0];
        let key5 = ctx['action_index'];
        let _6 = [ctx['action']];
        let vn7 = {type: 3, text: \`link\`, el: null};
        let vn9 = {type: 2, tag: \\"a\\", children: [vn7], key: \`k8__\${key5}\`, on: {click: ev => this.handle(ev, metadata, _6, 'activate')}};
        let vn11 = {type: 2, tag: \\"li\\", children: [vn9], key: \`k10__\${key5}\`};
        vn2.children.push(vn11);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-on can bind handlers with object arguments 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = [{val:5}];
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, 'add')}};
}"
`;

exports[`t-on can bind two event handlers 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn1], key: \`k2\`, on: {click: ev => this.handle(ev, metadata, [], 'handleClick'), dblclick: ev => this.handle(ev, metadata, [], 'handleDblClick')}};
}"
`;

exports[`t-on handler is bound to proper owner 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn1], key: \`k2\`, on: {click: ev => this.handle(ev, metadata, [], 'add')}};
}"
`;

exports[`t-on t-on combined with t-esc 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: ctx['text'], el: null};
    let vn3 = {type: 2, tag: \\"button\\", children: [vn1], key: \`k2\`, on: {click: ev => this.handle(ev, metadata, [], 'onClick')}};
    return {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
}"
`;

exports[`t-on t-on combined with t-raw 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 1, children: this.htmlToVDOM(ctx['html'])};
    let vn3 = {type: 2, tag: \\"button\\", children: [vn1], key: \`k2\`, on: {click: ev => this.handle(ev, metadata, [], 'onClick')}};
    return {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
}"
`;

exports[`t-on t-on with inline statement (function call) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = {'state':ctx['state']};
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, ctx => {ctx['state'].incrementCounter(2)})}};
}"
`;

exports[`t-on t-on with inline statement 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = {'state':ctx['state']};
    let vn2 = {type: 3, text: \`Click\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, ctx => {ctx['state'].counter++})}};
}"
`;

exports[`t-on t-on with inline statement in a loop, capturing loop variable 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    let _4 = [33,123];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.elem_first = i0 === 0;
        ctx.elem_last = i0 === length3 - 1;
        ctx.elem = _4[i0];
        ctx.elem_index = i0;
        ctx.elem_value = _4[i0];
        let key5 = ctx['elem_index'];
        let _6 = {'state':ctx['state'],'elem':ctx['elem']};
        let vn7 = {type: 3, text: \`Click\`, el: null};
        let vn9 = {type: 2, tag: \\"button\\", children: [vn7], key: \`k8__\${key5}\`, on: {click: ev => this.handle(ev, metadata, _6, ctx => {ctx['state'].counter+=ctx['elem']})}};
        vn2.children.push(vn9);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-on t-on with inline statement, part 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = {'state':ctx['state'],'state':ctx['state']};
    let vn2 = {type: 3, text: \`Toggle\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, ctx => {ctx['state'].flag=!ctx['state'].flag})}};
}"
`;

exports[`t-on t-on with inline statement, part 3 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let _1 = {'state':ctx['state'],'someFunction':ctx['someFunction']};
    let vn2 = {type: 3, text: \`Toggle\`, el: null};
    return {type: 2, tag: \\"button\\", children: [vn2], key: \`k3\`, on: {click: ev => this.handle(ev, metadata, _1, ctx => {ctx['state'].n=ctx['someFunction'](3)})}};
}"
`;

exports[`t-on t-on with t-call 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-on t-on, with arguments and t-call 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    let vn1 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-raw empty value, and a body as default (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn2 = {type: 2, tag: \\"span\\", children: [], key: \`k1\`};
    let _3 = ctx['var']
    if (_3 !== undefined) {
        let vn4 = {type: 1, children: this.htmlToVDOM(ctx['var'])};
        vn2.children.push(vn4);
    } else {
        let vn5 = {type: 3, text: \`body\`, el: null};
        vn2.children.push(vn5);
    }
    return vn2;
}"
`;

exports[`t-raw from a (template, body) variable (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`def\`, el: null};
    let vn3 = {type: 2, tag: \\"abc\\", children: [vn1], key: \`k2\`};
    ctx.v = new this.VDomArray(vn3);
    let vn4 = {type: 1, children: ctx.v};
    return {type: 2, tag: \\"span\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-raw from a (template, value+body) variable (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.v = ctx['blip'];
    if (!ctx.v) {
        let _1 = new this.VDomArray();
        let vn2 = {type: 3, text: \`def\`, el: null};
        let vn4 = {type: 2, tag: \\"abc\\", children: [vn2], key: \`k3\`};
        _1.push(vn4);
        ctx.v = _1
    }
    let vn5 = {type: 1, children: this.htmlToVDOM(ctx.v)};
    return {type: 2, tag: \\"span\\", children: [vn5], key: \`k6\`};
}"
`;

exports[`t-raw literal 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 1, children: this.htmlToVDOM('ok')};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-raw not escaping 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 1, children: this.htmlToVDOM(ctx['var'])};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-raw only a t-raw directive, no parent! (*) 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 1, children: this.htmlToVDOM(ctx['var'])};
}"
`;

exports[`t-raw t-raw and another sibling node 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 3, text: \`hello\`, el: null};
    let vn3 = {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
    let vn4 = {type: 1, children: this.htmlToVDOM(ctx['var'])};
    return {type: 2, tag: \\"span\\", children: [vn3,vn4], key: \`k5\`};
}"
`;

exports[`t-raw t-raw inside t-call, with t-set outside 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__2\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`Hi\`, el: null};
    let vn3 = {type: 2, tag: \\"p\\", children: [vn1], key: \`k2\`};
    ctx.v = new this.VDomArray(vn3);
    let vn4 = this.callTemplate(\\"__template__1\\", ctx, metadata);
    return {type: 2, tag: \\"div\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-raw variable 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    let vn1 = {type: 1, children: this.htmlToVDOM(ctx['var'])};
    return {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set evaluate value expression 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.value = 1+2;
    let vn1 = {type: 3, text: ctx['value'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set evaluate value expression, part 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.value = ctx['somevariable']+2;
    let vn1 = {type: 3, text: ctx['value'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set set from attribute literal 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.value = 'ok';
    let vn1 = {type: 3, text: ctx['value'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set set from attribute lookup 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.stuff = ctx['value'];
    let vn1 = {type: 3, text: ctx['stuff'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set set from body literal 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: \`ok\`, el: null};
    ctx.value = new this.VDomArray(vn1);
    let vn2 = {type: 3, text: ctx['value'], el: null};
    return {type: 1, children: [vn2]};
}"
`;

exports[`t-set set from body lookup 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: ctx['value'], el: null};
    ctx.stuff = new this.VDomArray(vn1);
    let vn2 = {type: 3, text: ctx['stuff'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn2], key: \`k3\`};
}"
`;

exports[`t-set set from empty body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    return {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
}"
`;

exports[`t-set t-set and t-if 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.v = ctx['value'];
    if (ctx['v']==='ok') {
        let vn3 = {type: 3, text: \`grimbergen\`, el: null};
        vn2.children.push(vn3);
    }
    return vn2;
}"
`;

exports[`t-set t-set body is evaluated immediately 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.v1 = 'before';
    let vn1 = {type: 3, text: ctx['v1'], el: null};
    let vn3 = {type: 2, tag: \\"span\\", children: [vn1], key: \`k2\`};
    ctx.v2 = new this.VDomArray(vn3);
    ctx.v1 = 'after';
    let vn4 = {type: 1, children: ctx.v2};
    return {type: 2, tag: \\"div\\", children: [vn4], key: \`k5\`};
}"
`;

exports[`t-set t-set does not modify main context 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.value = 'ok';
    let vn1 = {type: 3, text: ctx['value'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1], key: \`k2\`};
}"
`;

exports[`t-set t-set evaluates an expression only once 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.v = ctx['value']+' artois';
    let vn1 = {type: 3, text: ctx['v'], el: null};
    let vn2 = {type: 3, text: ctx['v'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn1,vn2], key: \`k3\`};
}"
`;

exports[`t-set t-set should reuse variable if possible 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    ctx.v = 1;
    let _4 = ctx['list'];
    let length3 = _4.length;
    ctx = Object.create(ctx);
    for (let i0 = 0; i0 < length3; i0++) {
        ctx.elem_first = i0 === 0;
        ctx.elem_last = i0 === length3 - 1;
        ctx.elem = _4[i0];
        ctx.elem_index = i0;
        ctx.elem_value = _4[i0];
        let key5 = ctx['elem_index'];
        let vn6 = {type: 3, text: \`v\`, el: null};
        let vn7 = {type: 3, text: ctx['v'], el: null};
        let vn9 = {type: 2, tag: \\"span\\", children: [vn6,vn7], key: \`k8__\${key5}\`};
        ctx.v = ctx['elem'];
        let vn11 = {type: 2, tag: \\"div\\", children: [vn9], key: \`k10__\${key5}\`};
        vn2.children.push(vn11);
    }
    ctx = ctx.__proto__;
    return vn2;
}"
`;

exports[`t-set t-set with content and sub t-esc 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn1 = {type: 3, text: ctx['beep'], el: null};
    let vn2 = {type: 3, text: \` boop\`, el: null};
    ctx.setvar = new this.VDomArray(vn1,vn2);
    let vn3 = {type: 3, text: ctx['setvar'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
}"
`;

exports[`t-set t-set with t-value (falsy) and body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.v3 = false;
    ctx.v1 = 'before';
    ctx.v2 = ctx['v3'];
    if (!ctx.v2) {
        let _1 = new this.VDomArray();
        let vn2 = {type: 3, text: ctx['v1'], el: null};
        let vn4 = {type: 2, tag: \\"span\\", children: [vn2], key: \`k3\`};
        _1.push(vn4);
        ctx.v2 = _1
    }
    ctx.v1 = 'after';
    ctx.v3 = true;
    let vn5 = {type: 1, children: this.htmlToVDOM(ctx.v2)};
    return {type: 2, tag: \\"div\\", children: [vn5], key: \`k6\`};
}"
`;

exports[`t-set t-set with t-value (truthy) and body 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.v3 = 'Truthy';
    ctx.v1 = 'before';
    ctx.v2 = ctx['v3'];
    if (!ctx.v2) {
        let _1 = new this.VDomArray();
        let vn2 = {type: 3, text: ctx['v1'], el: null};
        let vn4 = {type: 2, tag: \\"span\\", children: [vn2], key: \`k3\`};
        _1.push(vn4);
        ctx.v2 = _1
    }
    ctx.v1 = 'after';
    ctx.v3 = false;
    let vn5 = {type: 1, children: this.htmlToVDOM(ctx.v2)};
    return {type: 2, tag: \\"div\\", children: [vn5], key: \`k6\`};
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 1 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['flag']) {
        let vn3 = {type: 3, text: \`1\`, el: null};
        ctx.ourvar = new this.VDomArray(vn3);
    } else {
        ctx.ourvar = 0;
    }
    let vn4 = {type: 3, text: ctx['ourvar'], el: null};
    vn2.children.push(vn4);
    return vn2;
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 1 2`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['flag']) {
        let vn3 = {type: 3, text: \`1\`, el: null};
        ctx.ourvar = new this.VDomArray(vn3);
    } else {
        ctx.ourvar = 0;
    }
    let vn4 = {type: 3, text: ctx['ourvar'], el: null};
    vn2.children.push(vn4);
    return vn2;
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 2 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['flag']) {
        ctx.ourvar = 1;
    } else {
        let vn3 = {type: 3, text: \`0\`, el: null};
        ctx.ourvar = new this.VDomArray(vn3);
    }
    let vn4 = {type: 3, text: ctx['ourvar'], el: null};
    vn2.children.push(vn4);
    return vn2;
}"
`;

exports[`t-set t-set, t-if, and mix of expression/body lookup, 2 2`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    let vn2 = {type: 2, tag: \\"div\\", children: [], key: \`k1\`};
    if (ctx['flag']) {
        ctx.ourvar = 1;
    } else {
        let vn3 = {type: 3, text: \`0\`, el: null};
        ctx.ourvar = new this.VDomArray(vn3);
    }
    let vn4 = {type: 3, text: ctx['ourvar'], el: null};
    vn2.children.push(vn4);
    return vn2;
}"
`;

exports[`t-set value priority 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    ctx = Object.create(ctx);
    ctx.value = 1;
    if (!ctx.value) {
        let _1 = new this.VDomArray();
        let vn2 = {type: 3, text: \`2\`, el: null};
        _1.push(vn2);
        ctx.value = _1
    }
    let vn3 = {type: 3, text: ctx['value'], el: null};
    return {type: 2, tag: \\"div\\", children: [vn3], key: \`k4\`};
}"
`;

exports[`whitespace handling consecutives whitespaces are condensed into a single space 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 29, template: \\"__template__1\\"};
}"
`;

exports[`whitespace handling white space \`only text nodes are condensed into a single space 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 28, template: \\"__template__1\\"};
}"
`;

exports[`whitespace handling whitespace \`only text nodes with newlines are removed 1`] = `
"function anonymous(ctx, metadata
) {
    // Template: \`__template__1\`
    return {type: 5, id: 30, template: \\"__template__1\\"};
}"
`;
